env/code_53f223400f8d9/stderr.txt
  File "main.py", line 9
    if('7' in str(num):
                      ^
SyntaxError: invalid syntax
